Fixed issue with horizontal Scrollbar on desktops

--- a/force-app/main/default/lwc/dsfrFooterCmp/dsfrFooterCmp.css
+++ b/force-app/main/default/lwc/dsfrFooterCmp/dsfrFooterCmp.css
@@ -6,7 +6,9 @@
 }
 .fr-footer {
     width: 100vw !important;
-    margin-left: min(600px - 50vw , 0px) !important;
+    margin-left: min(600px - 50vw, 0px) !important;
+    /*width: calc(100vw - 15px) !important;
+    margin-left: min(607.5px - 50vw, 0px) !important;*/
     /*margin-left: min(624px - 50vw , 0px) !important;*/
     /*margin-left: auto !important;
     margin-right: auto !important;*/
